--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -28,7 +28,7 @@
       flex-direction: column;
       margin-bottom: $spacing-lg;
       position: relative;
-      right: 13%;
+      right: 11.5%;
       bottom: 3%;
 
       @include breakpoint(md) {
@@ -83,7 +83,6 @@
     position: relative;
     left: 12%;
 
-
     & > input {
       padding: 0.5rem 2.2rem;
       border: 1px solid lightgray;
@@ -96,13 +95,16 @@
       font-family: $Poppins;
     }
     &_icon {
-      position: relative;
-      left: 21%;
+      color: #8197a4;
+      position: absolute;
+      left: 15%;
+      top: 30%;
+      transform: scale(1.3);
     }
   }
   &_icon {
-      width: 2.4rem;
-      position: relative;
-      left: 15%;
+    width: 2.4rem;
+    position: relative;
+    left: 15%;
   }
 }
