--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -79,32 +79,33 @@
     }
   }
   &_search {
-    color: $light;
     position: relative;
     left: 12%;
 
     & > input {
-      padding: 0.5rem 2.2rem;
+      padding: 0.4rem 2.2rem;
       border: 1px solid lightgray;
       border-radius: 2px;
       background: rgba(15, 23, 30, 0.2);
       border: 1px solid rgba(129, 151, 164, 0.5);
       color: #8197a4;
-      font-size: 1.1rem;
+      font-size: 1rem;
       margin-left: 2rem;
       font-family: $Poppins;
+      width: 15.7rem;
     }
     &_icon {
-      color: #8197a4;
+      color: whitesmoke;
       position: absolute;
       left: 15%;
       top: 30%;
-      transform: scale(1.3);
+      transform: scale(1.2);
     }
   }
   &_icon {
     width: 2.4rem;
     position: relative;
-    left: 15%;
+    left: 16%;
+    top: 2.5%;
   }
 }
